     specified on the command line if an interactive e-mail client is used.
     (Lukáš Lalinský)

   * ``bzr tags`` now prints the revision number for each tag, instead of
     the revision id, unless --show-ids is passed. In addition, tags can be
     sorted chronologically instead of lexicographically with --sort=time.
     (Adeodato Simó, #120231)

  DOCUMENTATION:

  BUG FIXES:

   * A progress bar has been added for knitpack -> knitpack fetching.
     (Robert Collins, #157789, #159147)

   * ``commit`` is now able to invoke an external editor in a non-ascii
     directory. (Daniel Watkins, #84043)

   * Catch connection errors for ftp.
     (Vincent Ladeuil, #164567)

   * Catch ShortReadvErrors while using pycurl.
     (Vincent Ladeuil, 172701)

   * ``check`` no longer reports spurious unreferenced text versions.
     (Robert Collins, John A Meinel, #162931, #165071)

   * Conflicts are now resolved recursively by ``revert``.
     (Aaron Bentley, #102739)

   * Detect invalid transport reuse attempts by catching invalid URLs.
     (Vincent Ladeuil, #161819)

   * Do no use timeout in HttpServer anymore.
     (Vincent Ladeuil, #158972).

   * Don't catch the exceptions related to the http pipeline status before
     retrying an http request or some programming errors may be masked.
     (Vincent Ladeuil, #160012)

   * Fix ``bzr rm`` to not delete modified and ignored files.
     (Lukáš Lalinský, #172598)

   * Fix exception when revisionspec contains merge revisons but log
     formatter doesn't support merge revisions. (Kent Gibson, #148908)

   * Fix exception when ScopeReplacer is assigned to before any members have
     been retrieved.  (Aaron Bentley)

   * Fix multiple connections during checkout --lightweight.
     (Vincent Ladeuil, #159150)

   * Fix possible error in insert_data_stream when copying between 
     pack repositories over bzr+ssh or bzr+http.  
     KnitVersionedFile.get_data_stream now makes sure that requested