@@ -31,6 +31,7 @@ Options include:
  * fetch - trace history copying between repositories
  * hooks - trace hook execution
  * hpss - trace smart protocol requests and responses
+ * htpp - trace http connections, requests and responses
  * index - trace major index operations
  * lock - trace when lockdir locks are taken or released
 
